<resources>
    <string name="app_name">ENPOVE2018</string>
    <string name="app_version">Versión 0.13.0</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_logo_inei">logo inei</string>
    <string name="nombre_encuesta">ENCUESTA DIRIGIDA A LA POBLACION VENEZOLANA QUE RESIDE EN EL PAÍS</string>
    <string name="login_texto_usuario">USUARIO</string>
    <string name="login_texto_password">CONTRASEÑA</string>
    <string name="login_texto_boton">INGRESAR</string>
    <string name="nombre_modulo_caratula">Carátula</string>
    <string name="nombre_modulo_entrevista_supervision">Entrevistas y Supervisión</string>
    <string name="nombre_modulo_funcionarios_encuesta">Funcionarios de la Encuesta</string>
    <string name="texto_especifique">Especifique</string>
    <string name="marco_mes">MES</string>
    <string name="marco_anio">ANIO</string>
    <string name="marco_periodo">PERIODO</string>
    <string name="marco_conglomerado">CONGLOMERADO</string>
    <string name="datos_generales_menu">Módulo Inicial: Datos Generales</string>
    <string name="datos_generales_submenu_1">Carátula</string>
    <string name="datos_generales_submenu_2">Hogares</string>
    <string name="datos_generales_submenu_3">Control de Visitas Encuestador</string>
    <string name="datos_generales_submenu_4">Control de Visitas Supervisor</string>
    <string name="datos_generales_submenu_5">Funcionarios</string>
    <string name="caratula_ubicacion_geografica">UBICACIÓN GEOGRÁFICA</string>
    <string name="caratula_departamento">1.DEPARTAMENTO</string>
    <string name="caratula_provincia">2.PROVINCIA</string>
    <string name="caratula_distrito">3.DISTRITO</string>
    <string name="caratula_centro_poblado">4.CENTRO POBLADO</string>
    <string name="caratula_ubicacion_muestral">UBICACIÓN MUESTRAL</string>
    <string name="caratula_zona">5.ZONA N°</string>
    <string name="caratula_n_manzana">6.MANZANA N°</string>
    <string name="caratula_aer">7.AER N°</string>
    <string name="caratula_n_vivienda">7.VIVIENDA N°</string>
    <string name="caratula_direccion">8.DIRECCIÓN DE LA VIVIENDA <i>(Para tipo de vía seleccione sólo un código)</i></string>
    <string-array name="caratula_array_tipo_via">
        <item>Seleccione</item>
        <item>1.Avenida</item>
        <item>2.Jirón</item>
        <item>3.Calle</item>
        <item>4.Pasaje</item>
        <item>5.Carretera</item>
        <item>6.Prolongación</item>
        <item>7.Otro</item>
    </string-array>
    <string name="caratula_tipo_via">TIPO DE VÍA</string>
    <string name="caratula_nombre_via">NOMBRE DE VÍA</string>
    <string name="caratula_n_puerta">N° PUERTA</string>
    <string name="caratula_block">BLOCK</string>
    <string name="caratula_interior">INTERIOR</string>
    <string name="caratula_piso">PISO</string>
    <string name="caratula_manzana">MANZANA</string>
    <string name="caratula_lote">LOTE</string>
    <string name="caratula_km">KM</string>
    <string name="caratula_n_telefono">N° de TELÉFONO</string>
    <string name="caratula_total_hogares">9.TOTAL DE HOGARES QUE OCUPAN LA VIVIENDA</string>
    <string name="caratula_n_hogares">¿CUANTOS HOGARES OCUPAN ESTA VIVIENDA?</string>
    <string name="caratula_n_hogares_ind">Sra.(Sr.): Si HOGAR es la persona o grupo de personas que se alimentan de una misma olla y atienden en común otras necesidades básicas.</string>
    <string name="modulo_4_p403">403.¿QUÉ ENFERMEDAD O MALESTAR CRÓNICO PADECE?</string>
    <string name="modulo_4_p403_sp1">1.Artritis</string>
    <string name="modulo_4_p403_sp2">2.Hipertensión</string>
    <string name="modulo_4_p403_sp3">3.Asma</string>
    <string name="modulo_4_p403_sp4">4.Reumatismo</string>
    <string name="modulo_4_p403_sp5">5.Diabetes</string>
    <string name="modulo_4_p403_sp6">6.Tuberculosis</string>
    <string name="modulo_4_p403_sp7">7.Colesterol</string>
    <string name="modulo_4_p403_sp8">8.Enfermedad pulmonar</string>
    <string name="modulo_4_p403_sp9">9.Cáncer</string>
    <string name="modulo_4_p403_sp10">10.Alteraciones de salud mental</string>
    <string name="modulo_4_p403_sp11">11.Enfermedad del corazón</string>
    <string name="modulo_4_p403_sp12">12.VIH/ SIDA</string>
    <string name="modulo_4_p403_sp13">13.Otras infecciones de transmisión sexual</string>
    <string name="modulo_4_p403_sp14">14.Otro</string>
    <string name="modulo_4_p403_especifique">Especifique</string>
    <string name="modulo_4_p407">407.¿CUÁLES SON LAS RAZONES POR LAS QUE NO ACUDIÓ A UN CENTRO O ESTABLECIMIENTO DE SALUD?</string>
    <string name="modulo_4_p407_sp1">1.No tuvo dinero</string>
    <string name="modulo_4_p407_sp2">2.Se encuentra lejos</string>
    <string name="modulo_4_p407_sp3">3.Demora mucho en atender</string>
    <string name="modulo_4_p407_sp4">4.No confía en los médicos</string>
    <string name="modulo_4_p407_sp5">5.No era tan grave / No fue necesario</string>
    <string name="modulo_4_p407_sp6">6.No tiene seguro</string>
    <string name="modulo_4_p407_sp7">7.Se automedicó o repitió receta anterior</string>
    <string name="modulo_4_p407_sp8">8.Falta de tiempo</string>
    <string name="modulo_4_p407_sp9">9.Por maltrato de personal de salud</string>
    <string name="modulo_4_p407_sp10">10.Por falta de documentos</string>
    <string name="modulo_4_p407_sp11">11.Temor por su situación migratoria</string>
    <string name="modulo_4_p407_sp12">12.No confía en las prácticas de salud y parto</string>
    <string name="modulo_4_p407_sp13">13.Otro</string>
    <string name="modulo_4_p407_especifique">Especifique</string>
    <string name="modulo_4_p411">411.EN EL ULTIMO MES, ¿HA MOSTRADO CAMBIOS FUERTES EN SU COMPORTAMIENTO  O ACTITUDES, TALES COMO:</string>
    <string name="modulo_4_p411_ind">(Lea cada una de las alternativas y seleccione uno o más códigos)</string>
    <string name="modulo_4_p411_sp1">1.Alejamiento de la familia y amigos?</string>
    <string name="modulo_4_p411_sp2">2.Estallidos agresivos o de enojo?</string>
    <string name="modulo_4_p411_sp3">3.Cambios de apetito o de hábitos alimenticios?</string>
    <string name="modulo_4_p411_sp4">4.Dolores de cabeza?</string>
    <string name="modulo_4_p411_sp5">5.Mojar la cama de nuevo o recurrentemente?</string>
    <string name="modulo_4_p411_sp6">6.Pesadillas o alteraciones del sueño?</string>
    <string name="modulo_4_p411_sp7">7.Malestar estomacal o dolor de estómago?</string>
    <string name="modulo_4_p411_sp8">8.Miedos nuevos o recurrentes (a la oscuridad, a estar solo, a personas extrañas)?</string>
    <string name="modulo_4_p411_sp9">9.Aferrado (no quiere perderle de vista a usted u otros miembros de la familia)?</string>
    <string name="modulo_4_p411_sp10">10.Llanto excesivo?</string>
    <string name="modulo_4_p411_sp11">11.Regreso a conductas presentes en una edad más temprana?</string>
    <string name="modulo_4_p411_sp12">12.Se asusta fácilmente?</string>
    <string name="modulo_4_p411_sp13">13.Otro</string>
    <string name="modulo_4_p411_sp14">14.NO HA MOSTRADO CAMBIOS DE COMPORTAMIENTO O ACTITUDES.</string>
    <string name="modulo_7_p706">706.EN VENEZUELA, ¿USTED PARTICIPABA DE ASOCIACIONES/ESPACIOS DE REUNIÓN COMUNITARIOS?</string>
    <string name="modulo_7_p706_si">1.Sí</string>
    <string name="modulo_7_p706_no">2.No</string>
    <string name="modulo_7_p707">707.EN LA COMUNIDAD O BARRIO, DONDE VIVE, ¿PARTICIPA USTED EN ASOCIACIONES/ESPACIOS DE REUNIÓN COMUNITARIOS, COMO:</string>
    <string name="modulo_7_p707_ind">(Lea cada una de las alternativas y seleccione uno o más códigos)</string>
    <string name="modulo_7_p707_sp1">1.Iglesia?</string>
    <string name="modulo_7_p707_sp2">2.Junta de vecinos?</string>
    <string name="modulo_7_p707_sp3">3.Asociaciones de padres?</string>
    <string name="modulo_7_p707_sp4">4.Asociación de venezolanos?</string>
    <string name="modulo_7_p707_sp5">5.Asociación de refugiados?</string>
    <string name="modulo_7_p707_sp6">6.Grupos juveniles?</string>
    <string name="modulo_7_p707_sp7">7.Grupos deportivos?</string>
    <string name="modulo_7_p707_sp8">8.Otra institución?</string>
    <string name="modulo_7_p707_especifique">Especifique</string>
    <string name="modulo_7_p707_sp9">9.NO PARTICIPA</string>
    <string name="modulo_7_p709">709. ¿CUÁLES SERÍAN LAS TRES PRINCIPALES NECESIDADES, QUE NO ESTÁN SIENDO CUBIERTAS EN SU HOGAR HOY EN DÍA?</string>
    <string name="modulo_7_p709_ind">(Espere la respuesta y seleccione solo las tres principales necesidades)</string>
    <string name="modulo_7_p709_sp1">1.Alimentos</string>
    <string name="modulo_7_p709_sp2">2.Ayuda médica</string>
    <string name="modulo_7_p709_sp3">3.Asistencia para regularizar la situación migratoria y/o estatus de refugiado</string>
    <string name="modulo_7_p709_sp4">4.Generación de ingresos/empleo</string>
    <string name="modulo_7_p709_sp5">5.Educación y capacitación</string>
    <string name="modulo_7_p709_sp6">6.Artículos no alimentarios (ropa/cuidado personal, etc.)</string>
    <string name="modulo_7_p709_sp7">7.Alojamiento</string>
    <string name="modulo_7_p709_sp8">8.Reunificación familiar</string>
    <string name="modulo_7_p709_sp9">9.Otra necesidad</string>
    <string name="modulo_7_p709_especifique">Especifique</string>
    <string name="modulo_7_p709_sp10">10.SUS NECESIDADES YA ESTAN CUBIERTAS</string>
    <string name="modulo_8_p813">813.USTED TIENE CONOCIMIENTO, ¿A QUIÉN O A DÓNDE RECURRIÓ?</string>
    <string name="modulo_8_p813_sp1">1.Esposo/a o compañero/a</string>
    <string name="modulo_8_p813_sp2">2.Padre o madre</string>
    <string name="modulo_8_p813_sp3">3.Familiar</string>
    <string name="modulo_8_p813_sp4">4.Amigo/a o vecino/a</string>
    <string name="modulo_8_p813_sp5">5.Iglesia</string>
    <string name="modulo_8_p813_sp6">6.Comisaria</string>
    <string name="modulo_8_p813_sp7">7.Juzgado/Fiscalía</string>
    <string name="modulo_8_p813_sp8">8.Establecimiento de salud</string>
    <string name="modulo_8_p813_sp9">9.DEMUNA</string>
    <string name="modulo_8_p813_sp10">10.Centro de Emergencia Mujer – CEM/MIMP</string>
    <string name="modulo_8_p813_sp11">11.Defensoría del Pueblo</string>
    <string name="modulo_8_p813_sp12">12.Organización privada</string>
    <string name="modulo_8_p813_sp13">13.ONG</string>
    <string name="modulo_8_p813_sp14">14.Otro</string>
    <string name="modulo_8_p813_especifique">Especifique</string>
    <string name="modulo_8_p820">820.EN SU OPINIÓN, ESTAS SITUACIONES DE VIOLENCIA SEXUAL SE PRESENTAN CON MÁS FRECUENCIA EN:</string>
    <string name="modulo_8_p820_sp1">1.¿El hogar?</string>
    <string name="modulo_8_p820_sp2">2.¿Residencia de alguien más?</string>
    <string name="modulo_8_p820_sp3">3.¿Lugar de trabajo?</string>
    <string name="modulo_8_p820_sp4">4.¿Centro educativo o de salud?</string>
    <string name="modulo_8_p820_sp5">5.¿Dependencia pública (ministerios, municipalidad, otras)?</string>
    <string name="modulo_8_p820_sp6">6.¿Comisaria?</string>
    <string name="modulo_8_p820_sp7">7.¿Al solicitar un empleo?</string>
    <string name="modulo_8_p820_sp8">8.¿En un local público (club, restaurante, tienda, discoteca)?</string>
    <string name="modulo_8_p820_sp9">9.¿En un local u oficina privada (banco, compañías de servicios públicos, etc.)? </string>
    <string name="modulo_8_p820_sp10">10.¿En la calle?</string>
    <string name="modulo_8_p820_sp11">11.¿Otro?</string>
    <string name="modulo_8_p820_especifique">Especifique</string>
</resources>