<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_4_p403"/>
    <CheckBox
        android:id="@+id/mod4_403_ck1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp1"/>
    <CheckBox
        android:id="@+id/mod4_403_ck2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp2"/>
    <CheckBox
        android:id="@+id/mod4_403_ck3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp3"/>
    <CheckBox
        android:id="@+id/mod4_403_ck4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp4"/>
    <CheckBox
        android:id="@+id/mod4_403_ck5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp5"/>
    <CheckBox
        android:id="@+id/mod4_403_ck6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp6"/>
    <CheckBox
        android:id="@+id/mod4_403_ck7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp7"/>
    <CheckBox
        android:id="@+id/mod4_403_ck8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp8"/>
    <CheckBox
        android:id="@+id/mod4_403_ck9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp9"/>
    <CheckBox
        android:id="@+id/mod4_403_ck10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp10"/>
    <CheckBox
        android:id="@+id/mod4_403_ck11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp11"/>
    <CheckBox
        android:id="@+id/mod4_403_ck12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp12"/>
    <CheckBox
        android:id="@+id/mod4_403_ck13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo_4_p403_sp13"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/mod4_403_ck14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_small"
            android:text="@string/modulo_4_p403_sp14"/>
        <EditText
            android:id="@+id/mod3_403_inputEspecifique"
            android:layout_width="@dimen/width_input_especifique"
            android:background="@drawable/input_text_disabled"
            android:hint="@string/modulo_4_p403_especifique"
            android:paddingLeft="@dimen/margen_small"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>